--- a/res/layout/selectboard.xml
+++ b/res/layout/selectboard.xml
@@ -4,29 +4,28 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
   
+  
+
+  
   <Button
 	android:id="@+id/button1"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
-	android:text="petit"
+	android:text="1"
 	android:layout_centerVertical="true"
 	android:layout_centerHorizontal="true"
 	/>
-   <Button android:id="@+id/button2"
-	    	android:text="Moyen"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_below="@+id/button1"
-			android:layout_centerHorizontal="true"
-			/>
-		<Button android:id="@+id/button3"
-	    	android:text="Grand"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_below="@+id/button2"
-			android:layout_centerHorizontal="true"
-			/>
-  
+  <Button android:layout_height="wrap_content" android:text="8" android:id="@+id/button8" android:layout_width="wrap_content" android:layout_toLeftOf="@+id/button1" android:layout_alignTop="@+id/button1" android:layout_alignBottom="@+id/button1"></Button>
+  <Spinner android:layout_height="wrap_content" android:id="@+id/spinner" android:layout_width="fill_parent" android:prompt="@string/number_prompt" android:layout_above="@+id/button1" ></Spinner>
+  <TextView android:layout_height="wrap_content" android:layout_marginTop="10dip" android:layout_width="fill_parent" android:id="@+id/textView1" android:text="@string/number_prompt" android:layout_above="@+id/spinner" ></TextView>
+  <Button android:id="@+id/button2" android:layout_height="wrap_content" android:text="2" android:layout_width="wrap_content" android:layout_below="@+id/button1" android:layout_alignLeft="@+id/button1" android:layout_alignRight="@+id/button1"></Button>
+  <Button android:layout_height="wrap_content" android:text="5" android:id="@+id/button5" android:layout_width="wrap_content" android:layout_toLeftOf="@+id/button2" android:layout_alignTop="@+id/button2" android:layout_alignBottom="@+id/button2"></Button>
+  <Button android:layout_height="wrap_content" android:text="9" android:id="@+id/button9" android:layout_width="wrap_content" android:layout_below="@+id/button2" android:layout_alignLeft="@+id/button2" android:layout_alignRight="@+id/button2"></Button>
+  <Button android:id="@+id/button3" android:layout_height="wrap_content" android:text="3" android:layout_width="wrap_content" android:layout_toRightOf="@+id/button1" android:layout_alignTop="@+id/button1" android:layout_alignBottom="@+id/button1"></Button>
+   <Button android:id="@+id/button4" android:layout_height="wrap_content" android:text="4" android:layout_width="wrap_content" android:layout_toRightOf="@+id/button2" android:layout_alignTop="@+id/button2" android:layout_alignBottom="@+id/button2"></Button>
+   <Button android:id="@+id/button6" android:layout_height="wrap_content" android:text="6" android:layout_width="wrap_content" android:layout_below="@+id/button4" android:layout_alignLeft="@+id/button4" android:layout_alignRight="@+id/button4"></Button>
+   <Button android:id="@+id/button7" android:layout_height="wrap_content" android:text="7" android:layout_width="wrap_content" android:layout_below="@+id/button5" android:layout_alignLeft="@+id/button5" android:layout_alignRight="@+id/button5"></Button>
   
   
 </RelativeLayout>
+
